:checkered_flag:               新增文章
codeql数据流分析和CC3反序列化分析

--- a/代码审计工具/CodeQL/基本语法/基础语法.md
+++ b/代码审计工具/CodeQL/基本语法/基础语法.md
@@ -274,3 +274,68 @@ module M {
 地址：https://www.4hou.com/posts/yJOW
 
 从第九篇后面开始就是根据具体一种语言，因为文章中是以python为例的，而且还不太一样，所以暂时先放置。后面的等先学了Java后再学习。
+
+## 类库
+
+| 名称         | 解释                                                         |
+| ------------ | ------------------------------------------------------------ |
+| Method       | 方法类，Method method表示获取当前项目中所有的方法            |
+| MethodAccess | 方法调用类，MethodAccess call表示获取当前项目当中的所有被调用的方法 |
+| Parameter    | 参数类，Parameter表示获取当前项目当中所有的参数              |
+
+以webgoat项目中的一个文件为例，查看它的AST语法树
+
+Method：获取当前项目中的所有方法
+
+![img](img/1667802938189-3ec89257-a164-4b5e-a111-30f815455197.png)
+
+MethodAccess：获取当前项目中被调用的方法
+
+![img](img/1667803022554-f6da1119-8ba4-48b3-951d-1f6295d098ac.png)
+
+Parameter：获取当前项目中的所有的参数
+
+![img](img/1667803069409-af478c7c-3a5b-469d-ae5d-fe4d7e6305d2.png)
+
+这样就好理解了。
+
+## 公式
+
+类型检查，也就是可以使用类型检查公式来对一个表达式进行检查是否有某种类型
+
+```java
+<expression> instanceof <type>
+```
+
+像这里，
+
+```java
+class MySource extends DataFlow::Node {
+    MySource() {
+      exists(Annotation ann,AnnotationType anntp|
+        this instanceof RemoteFlowSource or (
+            anntp.hasQualifiedName("org.springframework.web.bind.annotation", "RequestParam") and
+            ann.getType() = anntp and
+            this.asParameter().getAnAnnotation() = ann
+            )
+      )
+    }
+}
+class MyTaintTrackingConfiguration extends TaintTracking::Configuration {
+    MyTaintTrackingConfiguration() {
+        this = "MyTaintTrackingConfiguration"
+    }
+
+    override predicate isSource(DataFlow::Node source) {
+        source instanceof MySource
+    }
+
+    override predicate isSink(DataFlow::Node sink) {
+        exists(Call call |
+            sink.asExpr() = call.getArgument(0) and
+            call.getCallee().hasQualifiedName("java.sql", "Statement", "executeQuery")
+        )
+    }
+}
+```
+
